feat ✨: Adiciona cache e evita chamadas desnecessárias ao repositório
Adiciona cache ao EventoService para evitar chamadas desnecessárias ao repositório.